Version 5.2.0:

- Added: FluentDOM::load() provides direct access to the loaders
- Added: FluentDOM\Loader\JSONx loads JSONx into a JsonDOM document
- Added: FluentDOM\Transformer\JSONx, transform a JsonDOM document to JSONx
- Changed: FluentDOM\Serializer\Json now writes json using the JsonDOM rules.

Version 5.1.1:

- Fixed: FluentDOM\Element::append() needs to ignore arrays and strings
  if checking for callable

Version 5.1.0:

- Changed: All DOMNode descendants (FluentDOM\Document, FluentDOM\Element,
  FluentDOM\Text, ...) are now functors, allowing to evaluate an
  Xpath expression relative to them
- Changed: FluentDOM\Xpath is now a functor.
- Changed: FluentDOM\Element::apppend() is now longer restricted to
  FluentDOM\Appendable, but allows all kind of arguments
- Added: FluentDOM\ProcessingInstruction extends DOMProcessingInstruction
- Added: FluentDOM\Element::applyNamespaces(), adds xmlns
  attributes depending on the current namespace registration.
- Added: New FluentDOM\Nodes\Creator allows for compact node creation
- Added: FluentDOM\Loader\PHP\SimpleXml, load SimpleXmlElement
- Added: FluentDOM\Loader\PHP\PDO, load PDO statements
- Added: FluentDOM\Loader\Json\BadgerFish, load BadgerFish Json
- Added: FluentDOM\Loader\Json\JsonML, load JsonML
- Added: FluentDOM\Loader\Json\Rayfish, load Rayfish
- Added: FluentDOM\Loader\Lazy, Lazy load other loaders
- Added: FluentDOM\Serializer\Json\BadgerFish, generate BadgerFish Json
- Added: FluentDOM\Serializer\Json\JsonML, generate JsonML
- Added: FluentDOM\Serializer\Json\RabbitFish, generate RabbitFish Json
- Added: FluentDOM\Serializer\Json\Rayfish, generate Rayfish Json
- Added: FluentDOM\Transformer\Namespaces\Optimize, optimize
  namespace attributes, change prefixes
- Added: FluentDOM\Transformer\Namespaces\Replace, replace namespaces

Version 5.0.2:

- Fixed: Remove null bytes in FluentDOM\Xpath::quote()
- Fixed: Namespace definition for Symfony CSS Selector

Version 5.0.1:
