@@ -5,6 +5,10 @@ require(__DIR__.'/FluentDOM/Loadable.php');
 require(__DIR__.'/FluentDOM/XmlSerializable.php');
 
 require(__DIR__.'/FluentDOM/XmlSerialize.php');
+require(__DIR__.'/FluentDOM/Node/ChildNode.php');
+require(__DIR__.'/FluentDOM/Node/MutationMacro.php');
+require(__DIR__.'/FluentDOM/Node/NonDocumentTypeChildNode.php');
+require(__DIR__.'/FluentDOM/Node/ParentNode.php');
 require(__DIR__.'/FluentDOM/Node/StringCast.php');
 require(__DIR__.'/FluentDOM/Node/Xpath.php');
 
